fixed header and spacing on account screen

--- a/public/master.css
+++ b/public/master.css
@@ -1390,7 +1390,7 @@ input:focus {
 }
 .AccountNavTitle {
   color: #000;
-  font-size: 1.7rem;
+  font-size: 0.9rem;
 }
 .AccountNavTitleFloat {
   float: left;
